added save as  button for multi document processing

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Chyba při zpracování \"{{filename}}\"",
     "saveAll": "Uložit vše ({{count}})",
     "multiSaveSuccess": "{{count}} šablon bylo úspěšně uloženo!",
+    "multiSaveAsTitle": "Uložit {{count}} šablon jako",
+    "multiSaveAsModifierType": "Jak upravit názvy souborů?",
+    "multiSaveAsPrefix": "Předpona",
+    "multiSaveAsSuffix": "Přípona",
+    "multiSaveAsPrefixValue": "Text předpony",
+    "multiSaveAsSuffixValue": "Text přípony",
+    "multiSaveAsPrefixPlaceholder": "např., novy_",
+    "multiSaveAsSuffixPlaceholder": "např., _final",
+    "multiSaveAsPreview": "Náhled",
+    "multiSaveAsSuccess": "{{count}} šablon bylo úspěšně uloženo jako nové soubory!",
     "saveErrorFile": "Chyba při ukládání \"{{filename}}\"",
     "noTemplatesToSave": "Žádné šablony k uložení",
     "progress": {
