--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Fehler beim Verarbeiten von \"{{filename}}\"",
     "saveAll": "Alle speichern ({{count}})",
     "multiSaveSuccess": "{{count}} Vorlagen erfolgreich gespeichert!",
+    "multiSaveAsTitle": "{{count}} Vorlagen speichern unter",
+    "multiSaveAsModifierType": "Wie sollen die Dateinamen geändert werden?",
+    "multiSaveAsPrefix": "Präfix",
+    "multiSaveAsSuffix": "Suffix",
+    "multiSaveAsPrefixValue": "Präfix-Text",
+    "multiSaveAsSuffixValue": "Suffix-Text",
+    "multiSaveAsPrefixPlaceholder": "z.B., neu_",
+    "multiSaveAsSuffixPlaceholder": "z.B., _final",
+    "multiSaveAsPreview": "Vorschau",
+    "multiSaveAsSuccess": "{{count}} Vorlagen erfolgreich als neue Dateien gespeichert!",
     "saveErrorFile": "Fehler beim Speichern von \"{{filename}}\"",
     "noTemplatesToSave": "Keine Vorlagen zum Speichern",
     "progress": {
