--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -120,6 +120,16 @@
     "processErrorFile": "Error processing \"{{filename}}\"",
     "saveAll": "Save All ({{count}})",
     "multiSaveSuccess": "{{count}} templates saved successfully!",
+    "multiSaveAsTitle": "Save {{count}} Templates As",
+    "multiSaveAsModifierType": "How to modify filenames?",
+    "multiSaveAsPrefix": "Prefix",
+    "multiSaveAsSuffix": "Suffix",
+    "multiSaveAsPrefixValue": "Prefix text",
+    "multiSaveAsSuffixValue": "Suffix text",
+    "multiSaveAsPrefixPlaceholder": "e.g., new_",
+    "multiSaveAsSuffixPlaceholder": "e.g., _final",
+    "multiSaveAsPreview": "Preview",
+    "multiSaveAsSuccess": "{{count}} templates saved as new files successfully!",
     "saveErrorFile": "Error saving \"{{filename}}\"",
     "noTemplatesToSave": "No templates to save",
     "progress": {
