--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Error al procesar \"{{filename}}\"",
     "saveAll": "Guardar todo ({{count}})",
     "multiSaveSuccess": "¡{{count}} plantillas guardadas exitosamente!",
+    "multiSaveAsTitle": "Guardar {{count}} plantillas como",
+    "multiSaveAsModifierType": "¿Cómo modificar los nombres de archivo?",
+    "multiSaveAsPrefix": "Prefijo",
+    "multiSaveAsSuffix": "Sufijo",
+    "multiSaveAsPrefixValue": "Texto del prefijo",
+    "multiSaveAsSuffixValue": "Texto del sufijo",
+    "multiSaveAsPrefixPlaceholder": "ej., nuevo_",
+    "multiSaveAsSuffixPlaceholder": "ej., _final",
+    "multiSaveAsPreview": "Vista previa",
+    "multiSaveAsSuccess": "¡{{count}} plantillas guardadas como nuevos archivos exitosamente!",
     "saveErrorFile": "Error al guardar \"{{filename}}\"",
     "noTemplatesToSave": "No hay plantillas para guardar",
     "progress": {
