--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Erreur lors du traitement de \"{{filename}}\"",
     "saveAll": "Tout enregistrer ({{count}})",
     "multiSaveSuccess": "{{count}} modèles enregistrés avec succès !",
+    "multiSaveAsTitle": "Enregistrer {{count}} modèles sous",
+    "multiSaveAsModifierType": "Comment modifier les noms de fichiers ?",
+    "multiSaveAsPrefix": "Préfixe",
+    "multiSaveAsSuffix": "Suffixe",
+    "multiSaveAsPrefixValue": "Texte du préfixe",
+    "multiSaveAsSuffixValue": "Texte du suffixe",
+    "multiSaveAsPrefixPlaceholder": "ex., nouveau_",
+    "multiSaveAsSuffixPlaceholder": "ex., _final",
+    "multiSaveAsPreview": "Aperçu",
+    "multiSaveAsSuccess": "{{count}} modèles enregistrés comme nouveaux fichiers avec succès !",
     "saveErrorFile": "Erreur lors de l'enregistrement de \"{{filename}}\"",
     "noTemplatesToSave": "Aucun modèle à enregistrer",
     "progress": {
