--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Hiba a \"{{filename}}\" feldolgozása során",
     "saveAll": "Összes mentése ({{count}})",
     "multiSaveSuccess": "{{count}} sablon sikeresen mentve!",
+    "multiSaveAsTitle": "{{count}} sablon mentése másként",
+    "multiSaveAsModifierType": "Hogyan módosítsa a fájlneveket?",
+    "multiSaveAsPrefix": "Előtag",
+    "multiSaveAsSuffix": "Utótag",
+    "multiSaveAsPrefixValue": "Előtag szövege",
+    "multiSaveAsSuffixValue": "Utótag szövege",
+    "multiSaveAsPrefixPlaceholder": "pl., uj_",
+    "multiSaveAsSuffixPlaceholder": "pl., _vegleges",
+    "multiSaveAsPreview": "Előnézet",
+    "multiSaveAsSuccess": "{{count}} sablon sikeresen mentve új fájlokként!",
     "saveErrorFile": "Hiba a \"{{filename}}\" mentése során",
     "noTemplatesToSave": "Nincs mentendő sablon",
     "progress": {
