--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Errore nell'elaborazione di \"{{filename}}\"",
     "saveAll": "Salva tutto ({{count}})",
     "multiSaveSuccess": "{{count}} modelli salvati con successo!",
+    "multiSaveAsTitle": "Salva {{count}} modelli come",
+    "multiSaveAsModifierType": "Come modificare i nomi dei file?",
+    "multiSaveAsPrefix": "Prefisso",
+    "multiSaveAsSuffix": "Suffisso",
+    "multiSaveAsPrefixValue": "Testo del prefisso",
+    "multiSaveAsSuffixValue": "Testo del suffisso",
+    "multiSaveAsPrefixPlaceholder": "es., nuovo_",
+    "multiSaveAsSuffixPlaceholder": "es., _finale",
+    "multiSaveAsPreview": "Anteprima",
+    "multiSaveAsSuccess": "{{count}} modelli salvati come nuovi file con successo!",
     "saveErrorFile": "Errore nel salvataggio di \"{{filename}}\"",
     "noTemplatesToSave": "Nessun modello da salvare",
     "progress": {
