--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -101,6 +101,16 @@
     "processErrorFile": "「{{filename}}」の処理中にエラーが発生しました",
     "saveAll": "すべて保存 ({{count}})",
     "multiSaveSuccess": "{{count}} 個のテンプレートが正常に保存されました！",
+    "multiSaveAsTitle": "{{count}} 個のテンプレートを名前を付けて保存",
+    "multiSaveAsModifierType": "ファイル名をどのように変更しますか？",
+    "multiSaveAsPrefix": "接頭辞",
+    "multiSaveAsSuffix": "接尾辞",
+    "multiSaveAsPrefixValue": "接頭辞のテキスト",
+    "multiSaveAsSuffixValue": "接尾辞のテキスト",
+    "multiSaveAsPrefixPlaceholder": "例: 新規_",
+    "multiSaveAsSuffixPlaceholder": "例: _最終",
+    "multiSaveAsPreview": "プレビュー",
+    "multiSaveAsSuccess": "{{count}} 個のテンプレートが新しいファイルとして正常に保存されました！",
     "saveErrorFile": "「{{filename}}」の保存中にエラーが発生しました",
     "noTemplatesToSave": "保存するテンプレートがありません",
     "progress": {
