--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -101,6 +101,16 @@
     "processErrorFile": "Błąd podczas przetwarzania \"{{filename}}\"",
     "saveAll": "Zapisz wszystko ({{count}})",
     "multiSaveSuccess": "{{count}} szablonów zostało pomyślnie zapisanych!",
+    "multiSaveAsTitle": "Zapisz {{count}} szablonów jako",
+    "multiSaveAsModifierType": "Jak zmodyfikować nazwy plików?",
+    "multiSaveAsPrefix": "Przedrostek",
+    "multiSaveAsSuffix": "Przyrostek",
+    "multiSaveAsPrefixValue": "Tekst przedrostka",
+    "multiSaveAsSuffixValue": "Tekst przyrostka",
+    "multiSaveAsPrefixPlaceholder": "np., nowy_",
+    "multiSaveAsSuffixPlaceholder": "np., _final",
+    "multiSaveAsPreview": "Podgląd",
+    "multiSaveAsSuccess": "{{count}} szablonów zostało pomyślnie zapisanych jako nowe pliki!",
     "saveErrorFile": "Błąd podczas zapisywania \"{{filename}}\"",
     "noTemplatesToSave": "Brak szablonów do zapisania",
     "progress": {
