--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -122,6 +122,16 @@
     "processErrorFile": "Chyba pri spracovaní \"{{filename}}\"",
     "saveAll": "Uložiť všetko ({{count}})",
     "multiSaveSuccess": "{{count}} šablón bolo úspešne uložených!",
+    "multiSaveAsTitle": "Uložiť {{count}} šablón ako",
+    "multiSaveAsModifierType": "Ako upraviť názvy súborov?",
+    "multiSaveAsPrefix": "Predpona",
+    "multiSaveAsSuffix": "Prípona",
+    "multiSaveAsPrefixValue": "Text predpony",
+    "multiSaveAsSuffixValue": "Text prípony",
+    "multiSaveAsPrefixPlaceholder": "napr., novy_",
+    "multiSaveAsSuffixPlaceholder": "napr., _final",
+    "multiSaveAsPreview": "Náhľad",
+    "multiSaveAsSuccess": "{{count}} šablón bolo úspešne uložených ako nové súbory!",
     "saveErrorFile": "Chyba pri ukladaní \"{{filename}}\"",
     "noTemplatesToSave": "Žiadne šablóny na uloženie",
     "progress": {
