--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -101,6 +101,16 @@
     "processErrorFile": "处理 \"{{filename}}\" 时出错",
     "saveAll": "全部保存 ({{count}})",
     "multiSaveSuccess": "{{count}} 个模板已成功保存！",
+    "multiSaveAsTitle": "将 {{count}} 个模板另存为",
+    "multiSaveAsModifierType": "如何修改文件名？",
+    "multiSaveAsPrefix": "前缀",
+    "multiSaveAsSuffix": "后缀",
+    "multiSaveAsPrefixValue": "前缀文本",
+    "multiSaveAsSuffixValue": "后缀文本",
+    "multiSaveAsPrefixPlaceholder": "例如：新_",
+    "multiSaveAsSuffixPlaceholder": "例如：_最终",
+    "multiSaveAsPreview": "预览",
+    "multiSaveAsSuccess": "{{count}} 个模板已成功另存为新文件！",
     "saveErrorFile": "保存 \"{{filename}}\" 时出错",
     "noTemplatesToSave": "没有要保存的模板",
     "progress": {
