added deleting folder files from folderTree

--- a/src/locales/cs.json
+++ b/src/locales/cs.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "soubor",
+    "files": "soubory",
+    "previous": "Předchozí",
+    "next": "Další",
+    "selectedCount": "{{count}} vybráno",
+    "clearSelection": "Zrušit výběr",
+    "selectAll": "Vybrat vše",
+    "processSelected": "Zpracovat ({{count}})",
+    "deleteSelected": "Smazat ({{count}})",
+    "deleteSelectedConfirmTitle": "Smazat vybrané šablony",
+    "deleteSelectedConfirmMessage": "Opravdu chcete smazat {{count}} šablon(y)? Tuto akci nelze vrátit zpět.",
+    "deleteSelectedSuccess": "{{count}} šablon(y) bylo úspěšně smazáno",
+    "deleteSelectedFailed": "Nepodařilo se smazat {{count}} šablon(y)",
+    "deleting": "Mazání..."
   },
   "templateProcessor": {
     "title": "Zpracovat šablonu",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Smazat soubory",
+    "deleteFilesConfirm": "Smazat soubory z \"{{name}}\"?",
+    "deleteFilesDetail": "Toto trvale smaže {{count}} šablon(y), ale složka zůstane zachována.",
+    "filesDeleted": "{{count}} soubor(ů) bylo úspěšně smazáno",
+    "noFilesToDelete": "V této složce nejsou žádné soubory ke smazání",
+    "deleteFilesFailed": "Nepodařilo se smazat soubory",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
