--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "Datei",
+    "files": "Dateien",
+    "previous": "Zurück",
+    "next": "Weiter",
+    "selectedCount": "{{count}} ausgewählt",
+    "clearSelection": "Auswahl aufheben",
+    "selectAll": "Alle auswählen",
+    "processSelected": "Verarbeiten ({{count}})",
+    "deleteSelected": "Löschen ({{count}})",
+    "deleteSelectedConfirmTitle": "Ausgewählte Vorlagen löschen",
+    "deleteSelectedConfirmMessage": "Möchten Sie wirklich {{count}} Vorlage(n) löschen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "deleteSelectedSuccess": "{{count}} Vorlage(n) erfolgreich gelöscht",
+    "deleteSelectedFailed": "{{count}} Vorlage(n) konnten nicht gelöscht werden",
+    "deleting": "Löschen..."
   },
   "templateProcessor": {
     "title": "Vorlage verarbeiten",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Dateien löschen",
+    "deleteFilesConfirm": "Dateien aus \"{{name}}\" löschen?",
+    "deleteFilesDetail": "Dies löscht dauerhaft {{count}} Vorlage(n), aber der Ordner bleibt erhalten.",
+    "filesDeleted": "{{count}} Datei(en) erfolgreich gelöscht",
+    "noFilesToDelete": "Keine Dateien zum Löschen in diesem Ordner",
+    "deleteFilesFailed": "Dateien konnten nicht gelöscht werden",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
