--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "archivo",
+    "files": "archivos",
+    "previous": "Anterior",
+    "next": "Siguiente",
+    "selectedCount": "{{count}} seleccionados",
+    "clearSelection": "Limpiar selección",
+    "selectAll": "Seleccionar todo",
+    "processSelected": "Procesar ({{count}})",
+    "deleteSelected": "Eliminar ({{count}})",
+    "deleteSelectedConfirmTitle": "Eliminar plantillas seleccionadas",
+    "deleteSelectedConfirmMessage": "¿Está seguro de que desea eliminar {{count}} plantilla(s)? Esta acción no se puede deshacer.",
+    "deleteSelectedSuccess": "{{count}} plantilla(s) eliminada(s) exitosamente",
+    "deleteSelectedFailed": "No se pudieron eliminar {{count}} plantilla(s)",
+    "deleting": "Eliminando..."
   },
   "templateProcessor": {
     "title": "Procesar plantilla",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Eliminar archivos",
+    "deleteFilesConfirm": "¿Eliminar archivos de \"{{name}}\"?",
+    "deleteFilesDetail": "Esto eliminará permanentemente {{count}} plantilla(s), pero la carpeta se mantendrá.",
+    "filesDeleted": "{{count}} archivo(s) eliminado(s) exitosamente",
+    "noFilesToDelete": "No hay archivos para eliminar en esta carpeta",
+    "deleteFilesFailed": "Error al eliminar archivos",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
