--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "fichier",
+    "files": "fichiers",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "selectedCount": "{{count}} sélectionné(s)",
+    "clearSelection": "Effacer la sélection",
+    "selectAll": "Tout sélectionner",
+    "processSelected": "Traiter ({{count}})",
+    "deleteSelected": "Supprimer ({{count}})",
+    "deleteSelectedConfirmTitle": "Supprimer les modèles sélectionnés",
+    "deleteSelectedConfirmMessage": "Êtes-vous sûr de vouloir supprimer {{count}} modèle(s) ? Cette action ne peut pas être annulée.",
+    "deleteSelectedSuccess": "{{count}} modèle(s) supprimé(s) avec succès",
+    "deleteSelectedFailed": "Échec de la suppression de {{count}} modèle(s)",
+    "deleting": "Suppression..."
   },
   "templateProcessor": {
     "title": "Traiter le modèle",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Supprimer les fichiers",
+    "deleteFilesConfirm": "Supprimer les fichiers de \"{{name}}\" ?",
+    "deleteFilesDetail": "Cela supprimera définitivement {{count}} modèle(s), mais le dossier sera conservé.",
+    "filesDeleted": "{{count}} fichier(s) supprimé(s) avec succès",
+    "noFilesToDelete": "Aucun fichier à supprimer dans ce dossier",
+    "deleteFilesFailed": "Échec de la suppression des fichiers",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
