--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "file",
+    "files": "file",
+    "previous": "Precedente",
+    "next": "Successivo",
+    "selectedCount": "{{count}} selezionati",
+    "clearSelection": "Cancella selezione",
+    "selectAll": "Seleziona tutto",
+    "processSelected": "Elabora ({{count}})",
+    "deleteSelected": "Elimina ({{count}})",
+    "deleteSelectedConfirmTitle": "Elimina modelli selezionati",
+    "deleteSelectedConfirmMessage": "Sei sicuro di voler eliminare {{count}} modello/i? Questa azione non può essere annullata.",
+    "deleteSelectedSuccess": "{{count}} modello/i eliminato/i con successo",
+    "deleteSelectedFailed": "Impossibile eliminare {{count}} modello/i",
+    "deleting": "Eliminazione..."
   },
   "templateProcessor": {
     "title": "Elabora modello",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Elimina file",
+    "deleteFilesConfirm": "Eliminare i file da \"{{name}}\"?",
+    "deleteFilesDetail": "Questo eliminerà permanentemente {{count}} modello(i), ma la cartella verrà mantenuta.",
+    "filesDeleted": "{{count}} file eliminato(i) con successo",
+    "noFilesToDelete": "Nessun file da eliminare in questa cartella",
+    "deleteFilesFailed": "Impossibile eliminare i file",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
