--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "ファイル",
+    "files": "ファイル",
+    "previous": "前へ",
+    "next": "次へ",
+    "selectedCount": "{{count}} 件選択中",
+    "clearSelection": "選択を解除",
+    "selectAll": "すべて選択",
+    "processSelected": "処理 ({{count}})",
+    "deleteSelected": "削除 ({{count}})",
+    "deleteSelectedConfirmTitle": "選択したテンプレートを削除",
+    "deleteSelectedConfirmMessage": "{{count}} 件のテンプレートを削除してもよろしいですか？この操作は元に戻せません。",
+    "deleteSelectedSuccess": "{{count}} 件のテンプレートが正常に削除されました",
+    "deleteSelectedFailed": "{{count}} 件のテンプレートの削除に失敗しました",
+    "deleting": "削除中..."
   },
   "templateProcessor": {
     "title": "テンプレートを処理",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "ファイルを削除",
+    "deleteFilesConfirm": "\"{{name}}\" からファイルを削除しますか？",
+    "deleteFilesDetail": "{{count}} 個のテンプレートが完全に削除されますが、フォルダは保持されます。",
+    "filesDeleted": "{{count}} 個のファイルが正常に削除されました",
+    "noFilesToDelete": "このフォルダには削除するファイルがありません",
+    "deleteFilesFailed": "ファイルの削除に失敗しました",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
