--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "plik",
+    "files": "pliki",
+    "previous": "Poprzednia",
+    "next": "Następna",
+    "selectedCount": "{{count}} wybranych",
+    "clearSelection": "Wyczyść zaznaczenie",
+    "selectAll": "Zaznacz wszystko",
+    "processSelected": "Przetwórz ({{count}})",
+    "deleteSelected": "Usuń ({{count}})",
+    "deleteSelectedConfirmTitle": "Usuń wybrane szablony",
+    "deleteSelectedConfirmMessage": "Czy na pewno chcesz usunąć {{count}} szablon(ów)? Tej akcji nie można cofnąć.",
+    "deleteSelectedSuccess": "{{count}} szablon(ów) zostało pomyślnie usuniętych",
+    "deleteSelectedFailed": "Nie udało się usunąć {{count}} szablon(ów)",
+    "deleting": "Usuwanie..."
   },
   "templateProcessor": {
     "title": "Przetwórz szablon",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Usuń pliki",
+    "deleteFilesConfirm": "Usunąć pliki z \"{{name}}\"?",
+    "deleteFilesDetail": "To trwale usunie {{count}} szablon(ów), ale folder zostanie zachowany.",
+    "filesDeleted": "{{count}} plik(ów) zostało pomyślnie usuniętych",
+    "noFilesToDelete": "Brak plików do usunięcia w tym folderze",
+    "deleteFilesFailed": "Nie udało się usunąć plików",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
