--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "文件",
+    "files": "文件",
+    "previous": "上一页",
+    "next": "下一页",
+    "selectedCount": "已选择 {{count}} 个",
+    "clearSelection": "清除选择",
+    "selectAll": "全选",
+    "processSelected": "处理 ({{count}})",
+    "deleteSelected": "删除 ({{count}})",
+    "deleteSelectedConfirmTitle": "删除选中的模板",
+    "deleteSelectedConfirmMessage": "确定要删除 {{count}} 个模板吗？此操作无法撤消。",
+    "deleteSelectedSuccess": "{{count}} 个模板已成功删除",
+    "deleteSelectedFailed": "{{count}} 个模板删除失败",
+    "deleting": "删除中..."
   },
   "templateProcessor": {
     "title": "处理模板",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "删除文件",
+    "deleteFilesConfirm": "从 \"{{name}}\" 删除文件？",
+    "deleteFilesDetail": "这将永久删除 {{count}} 个模板，但文件夹将保留。",
+    "filesDeleted": "{{count}} 个文件已成功删除",
+    "noFilesToDelete": "此文件夹中没有要删除的文件",
+    "deleteFilesFailed": "删除文件失败",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
