--- a/src/locales/hu.json
+++ b/src/locales/hu.json
@@ -67,7 +67,21 @@
     "itemsPerPage": "Items per page",
     "pageOf": "Page {{current}} of {{total}}",
     "noResults": "No files match your search",
-    "resultsCount": "{{count}} file(s) found"
+    "resultsCount": "{{count}} file(s) found",
+    "file": "fájl",
+    "files": "fájlok",
+    "previous": "Előző",
+    "next": "Következő",
+    "selectedCount": "{{count}} kiválasztva",
+    "clearSelection": "Kiválasztás törlése",
+    "selectAll": "Összes kiválasztása",
+    "processSelected": "Feldolgozás ({{count}})",
+    "deleteSelected": "Törlés ({{count}})",
+    "deleteSelectedConfirmTitle": "Kiválasztott sablonok törlése",
+    "deleteSelectedConfirmMessage": "Biztosan törölni szeretné a(z) {{count}} sablont? Ez a művelet nem vonható vissza.",
+    "deleteSelectedSuccess": "{{count}} sablon sikeresen törölve",
+    "deleteSelectedFailed": "{{count}} sablon törlése sikertelen",
+    "deleting": "Törlés..."
   },
   "templateProcessor": {
     "title": "Sablon feldolgozása",
@@ -160,6 +174,12 @@
     "createSubfolder": "Create Subfolder",
     "renameFolder": "Rename Folder",
     "deleteFolder": "Delete Folder",
+    "deleteFiles": "Fájlok törlése",
+    "deleteFilesConfirm": "Fájlok törlése a \"{{name}}\" mappából?",
+    "deleteFilesDetail": "Ez véglegesen töröl {{count}} sablon(t), de a mappa megmarad.",
+    "filesDeleted": "{{count}} fájl sikeresen törölve",
+    "noFilesToDelete": "Nincsenek törölhető fájlok ebben a mappában",
+    "deleteFilesFailed": "A fájlok törlése sikertelen",
     "folderName": "Folder name",
     "parentFolder": "Parent folder",
     "enterFolderName": "Enter folder name...",
